# ChangeLog for dev-ruby/do_sqlite3
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*do_sqlite3-0.10.2 (15 Aug 2010)

  15 Aug 2010; Hans de Graaff <graaff@gentoo.org> -do_sqlite3-0.9.9.ebuild,
  +do_sqlite3-0.10.2.ebuild:
  Version bump. Remove old version that has broken dependencies.

  30 Nov 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +do_sqlite3-0.9.9.ebuild:
  Initial commit, thanks to Cyril Mougel <cyril.mougel@gmail.com>.
