@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST do_sqlite3-0.10.2.gem 20480 RMD160 e8d85c119b12e34495ccef5f9bf0356514660771 SHA1 ac5f6c80daa3c081164aea0bdf30f75ed88d3206 SHA256 20d165515b8d0d63f5b72aff03f5e62b5e173ffd7276245a642f2e42221da646
+DIST do_sqlite3-0.10.3.gem 20992 RMD160 932ec3acb56b81b904c38bc29dee0e9856a4108e SHA1 087da8e08ce7feb628548b316c4eec06cbc4d901 SHA256 1bd23ebf88b2b48ae6fa8024fd3e9434269ce7c34e6454304c0a4f0152ccd160
 EBUILD do_sqlite3-0.10.2.ebuild 1124 RMD160 3f6f20c19f169d950ae6843f332d5539564c74a8 SHA1 a0ed9ef83d0b7e621e0722225c7526b95ae56f7c SHA256 e71e493e4c63cf703b9a3551c97e054f2ee270fcf7607bf47f59afb2da5dab4e
-MISC ChangeLog 482 RMD160 90ab383ede9c5e5350facf371cf49607c6f55593 SHA1 c8f8ae877eff1f5ef891f32050d4520e16bb71f2 SHA256 4871030ab6bed0e4febdeb0cd8abaac29cbee7584934b8f094dbd68c7c3f5ca8
+EBUILD do_sqlite3-0.10.3.ebuild 1223 RMD160 6f616c3dcbe2cbe00685ca9cc86e169927c1a182 SHA1 9dd4abe36b604add98519d8485177b3b1d20f9c7 SHA256 cb4f75ee2c7d8b6517d7501eb3964ec010615ec8048d6dfdc81e59e38c76913a
+MISC ChangeLog 610 RMD160 770606c97ec26029c57a14671091f8f0b97a0a45 SHA1 6f49205371fa841e5dc3211149acbca63bf316f2 SHA256 f07376cf3700ba50df8fda957aa8df4ac5e70764da3e7849cbbc2c207197b594
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkxnrucACgkQZihJkut28SsXpAEAxWCzV/DhFrUBGAJAto2lNmBY
-iQHrNov2baP9GOUmfrkA/2kOClXN0wvatwnYIu0gH0TV3gIO+bP7aw9aL+s4wFkP
-=Y+UC
+iF4EAREIAAYFAk20bU4ACgkQrnu0mw69JkpPeQD7B3InRLAn4RY8DOrx3Rs4IqH/
+VNEiblTKD21ok1dKjyMA/3mPn1htEbqRn/tfPHAaPhWANufed1uBuxVh6vhtVvmz
+=F7RL
 -----END PGP SIGNATURE-----
