@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/do_sqlite3
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*do_sqlite3-0.10.3 (24 Apr 2011)
+
+  24 Apr 2011; Hans de Graaff <graaff@gentoo.org> +do_sqlite3-0.10.3.ebuild:
+  Version bump.
 
 *do_sqlite3-0.10.2 (15 Aug 2010)
 
